# gameboy-emulator

./: .gitignore  Cargo.toml  README.md
src/: apu.rs  cpu.rs  lib.rs  main.rs  neones.rs  ppu.rs  renderer.rs  system.rs  trace.rs  utils.rs
src/apu/: dmc.rs  envelope.rs  filter.rs  lengthcounter.rs  mixer.rs  noise.rs  pulse.rs  timer.rs  triangle.rs
src/bus/: cartridge.rs  memory.rs  mod.rs
src/cpu/: instruction.rs  interrupt.rs  memory.rs  mod.rs  opcode.rs  register.rs
src/joypad/: mod.rs
src/memory/: bus.rs  mod.rs  rom.rs
src/ppu/: color.rs  frame.rs  mod.rs  palette.rs  register.rs  state.rs
src/ppu/register/: address.rs  controller.rs  mask.rs  mod.rs  scroll.rs  status.rs
src/renderer/: frame.rs  mod.rs  sdlrenderer.rs  viewport.rs
src/system/: cartridge.rs  joypad.rs  mapper.rs
src/system/mapper/: banks.rs  mapper0.rs  mapper1.rs  mapper2.rs  mapper3.rs  mapper4.rs
web/: .prettierignore  build-wasm.sh  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/neones-web/: Cargo.toml
web/neones-web/src/: lib.rs
web/src/: app.css  app.html  global.d.ts
web/src/lib/: audio-worklet.ts
web/src/lib/components/: Controls.svelte  Modal.svelte  NeoNES.svelte  RomLoader.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/static/roms/: Rooms.nes
