[package]
name = "neones"
version = "0.1.0"
authors = ["Muhamamd Sohail <mhsohail56@gmail.com>"]
license = "MIT"
repository = "https://github.com/msohaill/neones"
readme = "README.md"
description = "A lightweight NES emulator written in Rust."
edition = "2021"

[dependencies]
ringbuf = "0.4.1"
sdl2 = { version = "^0.37.0", features = ["static-link", "bundled"] }
