[package]
name = "neones-web"
version = "0.1.0"
authors = ["Muhamamd Sohail <mhsohail56@gmail.com>"]
license = "MIT"
readme = "../README.md"
description = "A lightweight NES emulator written in Rust, for the web."
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
neones = { path = "../../" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.69"

[profile.release]
opt-level = "s"
